--- a/网络基础.md
+++ b/网络基础.md
@@ -24,10 +24,5 @@
   4. TCP提供阻塞/流量控制，UDP没有
   5. TCP适用于可靠性要求高的传输，数据量大，传输时间要求低的场景；UDP适用于时间要求高，可靠性要求低，数据量较少的场景
   
-### HTTP的长连接与短连接
-HTTP1.1规定了默认保持长连接（HTTP persistent connection ，也有翻译为持久连接），数据传输完成了保持TCP连接不断开（不发RST包、不四次握手），等待在同域名下继续用这个通道传输数据（一般请求头有Connection: keep-alive）；相反的就是短连接。如果HTTP1.1版本的HTTP请求报文不希望使用长连接，则要在HTTP请求报文首部加上Connection: close。
-
-客户端的长连接不可能无限期的拿着，会有一个超时时间，服务器有时候会告诉客户端超时时间，譬如Keep-Alive: timeout=20，表示这个TCP通道可以保持20秒。另外还可能有max=XXX，表示这个长连接最多接收XXX次请求就断开。还有Content-length: xxx，表示接收数据长度达到一定数值服务器就断开长连接。
-
-对于客户端来说，如果服务器没有告诉客户端超时时间也没关系，服务端可能主动发起四次握手断开TCP连接，客户端能够知道该TCP连接已经无效；另外TCP还有心跳包来检测当前连接是否还活着，方法很多，避免浪费资源。
-
+## OSI七层模型与TCP/IP五层模型
+### OSI七层模型
