--- a/计算机基础.md
+++ b/计算机基础.md
@@ -1,2 +1,12 @@
 ### LRU cache
 cpu中会使用L1 Cache，L2 Cache
+
+### 进程间通信方式
+ 1. 管道
+ 2. 消息队列 
+ 3. 共享内存
+ 4. socket
+ 5. 信号
+    
+    信号是在软件层次上对中断机制的一种模拟，是一种异步通信方式。linux内核通过信号通知用户进程，不同的信号类型代表不同的事件。如kill -9，向指定进程发送终止信号。
+ 6. 文件锁
